--- a/Selu383.SP25.P03.Web/src/pages/SignInPage/SignInPage.css
+++ b/Selu383.SP25.P03.Web/src/pages/SignInPage/SignInPage.css
@@ -1,4 +1,3 @@
-/* src/pages/SignInPage/SignInPage.css */
 .signin-page {
   min-height: 100vh;
   background-color: #000000;
@@ -15,7 +14,7 @@
   width: 100%;
   max-width: 400px;
   margin: 0 auto;
-  padding-top: 60px; /* Account for navbar */
+  padding-top: 60px;
 }
 
 .signin-card {
@@ -137,7 +136,6 @@
   text-decoration: underline;
 }
 
-/* Responsive styles */
 @media (max-width: 480px) {
   .signin-container {
     padding: 0.5rem;
